# ConnectFourCS8

./: CMakeLists.txt  README.md  game.cpp  game.h  main.cpp
includes/board/: board.cpp  board.h
includes/game/: game.cpp  game.h
includes/player/: player.cpp  player.h
